[tool.poetry]
name = "distilabel-cost-calculator"
version = "0.2.1"
description = "A custom Step for LLM API cost calculation for the distilabel library."
authors = ["Djellal Mohamed Aniss <djellalmohamedaniss@outlook.com>"]
readme = "README.md"

packages = [{include = "distilabel_cost_calculator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10.15"
tiktoken = "^0.8.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
distilabel = ">=1.3.2"
openai = "^1.51.2"
tiktoken = "^0.8.0"
pytest = "^8.3.3"
instructor = "^1.5.2"
typing-extensions = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
